fixtures/cs-cmp-01/good/compare-timing-safe-result.ts
import { timingSafeEqual } from "crypto";

export function checkToken(token: string, a: Buffer, b: Buffer) {
	return token === timingSafeEqual(a, b);
}
